--- a/data/projects.json
+++ b/data/projects.json
@@ -18,21 +18,39 @@
     "type": "video"
   },
   {
+    "title": "PathFinding",
+    "description": "Github: https://github.com/x739809514/PathFinding_Algorithms \n\n This project is about Pathfinding algorithms. There are 3 methods here, NavMesh, A star and Funnel Algorithm. The Funnel Algorithm is independent with Unity, and it can be extracted for back-end",
+    "file": "pathfinding.mp4",
+    "type": "video"
+  },
+  {
     "title": "RFramework",
-    "description": "Github: https://github.com/x739809514/RFramework.\n This framework is mainly used for beginners who are just learning how to make games. It provides a simple system for event distribution, storage, scene switching, etc. The framework allows beginners to build their own 2D games based on this framework. Beginners can build their own 2D games based on this framework. At the same time, you can also learn the knowledge of related design patterns.",
+    "description": "Github: https://github.com/x739809514/RFramework.\n\n This framework is mainly used for beginners who are just learning how to make games. It provides a simple system for event distribution, storage, scene switching, etc. The framework allows beginners to build their own 2D games based on this framework. Beginners can build their own 2D games based on this framework. At the same time, you can also learn the knowledge of related design patterns.",
     "file": "RFramework.png",
     "type": "image"
   },
   {
+    "title": "SocketLib",
+    "description": "Github: https://github.com/x739809514/SoketLib \n\n This is a NetWork API library written by c#. It can be used for game back-end.",
+    "file": "SocketLib.png",
+    "type": "image"
+  },
+  {
     "title": "HotFixProj",
-    "description": "Github: https://github.com/x739809514/UHotFixProject\n This is a hotload project which is based on ILRuntime. I implemented an UI framework in this project. ILRuntime is a hotload solution for mobile games, which can let developers code in c#. ILRuntime's performance is great, it runs 10 times faster than xLua in mobile phones. If you want to know more details about how to use ILRuntime, please check the official document: https://ourpalm.github.io/ILRuntime/public/v1/guide/index.html",
+    "description": "Github: https://github.com/x739809514/UHotFixProject\n\n This is a hotload project which is based on ILRuntime. I implemented an UI framework in this project. ILRuntime is a hotload solution for mobile games, which can let developers code in c#. ILRuntime's performance is great, it runs 10 times faster than xLua in mobile phones. If you want to know more details about how to use ILRuntime, please check the official document: https://ourpalm.github.io/ILRuntime/public/v1/guide/index.html",
     "file": "IlR.png",
     "type": "image"
   },
   {
     "title": "AnimationSystem",
-    "description": "Github: https://github.com/x739809514/AnimationSystem\n The traditional Animation Controllers are complex and easy to be messy. We can use Playable to build a custom Animation system. In this project, I built some nodes for animation graph: 'Mix', 'blendtree','random selector', 'AnimUnit', 'root'. All these nodes are controlled by AnimBehavior.",
+    "description": "Github: https://github.com/x739809514/AnimationSystem\n\n The traditional Animation Controllers are complex and easy to be messy. We can use Playable to build a custom Animation system. In this project, I built some nodes for animation graph: 'Mix', 'blendtree','random selector', 'AnimUnit', 'root'. All these nodes are controlled by AnimBehavior.",
     "file": "Playable.mp4",
+    "type": "video"
+  },
+  {
+    "title": "PuzzelGameFramework",
+    "description": "Github: https://github.com/x739809514/Lostlsland_Proj\n\n This is a simple puzzle game, it has several game systems, such as SceneManager, New Game Plus system, Saving system, EventSystem, BagSystem.",
+    "file": "lostisland.mp4",
     "type": "video"
   }
 ]
